Organizando templates do projeto, retirando script não utilizado

--- a/templates/editar_info_do_usuario.html
+++ b/templates/editar_info_do_usuario.html
@@ -114,7 +114,7 @@
                     <input type="number" id="numero" name="numero" class="form-control" value="{{ endereco.numero_da_rua }}" min="1" required>
 
                     <label for="complemento" class="col-md-4 control-label">Complemento</label>
-                    <input type="text" id="complemento" name="complemento" maxlength="64" size="64" class="form-control" value="{{ endereco.complemento }}" required>
+                    <input type="text" id="complemento" name="complemento" maxlength="64" size="64" class="form-control" value="{{ endereco.complemento }}">
 
             <div class="botao">
                 <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
