--- a/templates/registrar_usuario.html
+++ b/templates/registrar_usuario.html
@@ -108,7 +108,7 @@
                     <input type="number" id="numero" placeholder="000" name="numero" class="form-control" min=1 required>
 
                     <label class="col-md-4 control-label" for="complemento">Complemento</label>
-                    <input type="text" id="complemento" placeholder="Apto 00" name="complemento" maxlength="64" size="64" class="form-control" required>
+                    <input type="text" id="complemento" placeholder="Apto 00" name="complemento" maxlength="64" size="64" class="form-control">
 
             <div class="botao">
                 <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
