Adicionando arquivos js para msg alert

--- a/templates/logar_usuario.html
+++ b/templates/logar_usuario.html
@@ -51,6 +51,8 @@
         </form>
     </div>
 
+    <script type="text/javascript" src="static/js/jquery.js"></script>
+    <script type="text/javascript" src="static/js/app.js"></script>
 
 </body>
 </html>
