--- a/templates/mostrar_menu_usuario.html
+++ b/templates/mostrar_menu_usuario.html
@@ -90,6 +90,9 @@
         </form>
     </div>
 
+    <script type="text/javascript" src="static/js/jquery.js"></script>
+    <script type="text/javascript" src="static/js/app.js"></script>
+
 </body>
 </html>
 
